@@ -15,6 +15,7 @@ SVN
 - fixed adding new tracks in manual channel management mode
 - correctly handle when there's too many tabs open for all to be visible
 - fixed crash in score editor
+- fixed 'snap notes to grid' sometimes collapsing notes of duration 0
 - code cleanup
 
 1.1.2
